fix(styles): show scrollbar in overflowing preformatted text

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,6 +29,10 @@ footer > div {
   outline: none;
 }
 
+pre {
+  overflow-x: auto;
+}
+
 table {
   border-collapse: collapse;
   max-width: 100%;
